# hwfl

./: .gitignore  README.md  hwfl.cabal  model-catalog.json  pml.cabal
.cursor/: README.md
.cursor/rules/: project-docs.mdc
.cursor/skills/session-handoff/: SKILL.md
app/: Main.hs
docs/: README.md  STATUS.md  TASKS.md  architecture.md  hwfi-reference.md  idea.md  language-reference.md  semantic-check-plan.md  skills-plan.md  stdlib.md  tutorial.md
docs/examples/: par-confirm.md  summarise.md
docs/log/: 2026-07.md
docs/log/archive/: tasks-2026-07.md
docs/spec/: 00-overview.md  01-modules.md  02-language.md  03-types.md  04-effects.md  05-host-ops.md  06-runtime.md  07-observability.md  08-llm-provider.md  09-cli.md  10-acceptance.md  11-grammar.ebnf  12-example-suite.md
examples/: agent-choice.md  agent-object.md  agent-tools.md  chat.md  choose.md  obs-span.md  promote.md  summarise.md
examples/call-inner-workflow/: project.json
examples/call-inner-workflow/workflows/: inner.md  main.md
examples/chat/: README.md  project.json
examples/chat/workflows/: main.md
examples/choose/: README.md  project.json
examples/choose/workflows/: main.md
examples/coding-agent/: README.md  project.json
examples/coding-agent-chat/: README.md  project.json
examples/coding-agent-chat/workflows/: main.md
examples/coding-agent/skills/: haskell-cabal.md  python-pytest.md  react-vite.md  rust-cargo.md
examples/coding-agent/workflows/: coding.md  gather_context.md  main.md  verify.md
examples/compare/: README.md  project.json
examples/compare/fixture/: article.txt
examples/compare/genomes/lean/: project.json
examples/compare/genomes/rich/: project.json
examples/compare/workflows/: main.md
examples/evolve-agent/: README.md  project.json
examples/evolve-agent/fixture/: prompt.txt
examples/evolve-agent/fixture/project/: stats.py  test_stats.py
examples/evolve-agent/genomes/tight/: project.json
examples/evolve-agent/genomes/wasteful/: project.json
examples/evolve-agent/workflows/: main.md
examples/semantic-check/: README.md  project.json
examples/semantic-check/workflows/: main.md
examples/simple-coding-agent/: README.md  project.json
examples/simple-coding-agent/skills/: haskell-cabal.md  react-vite.md
examples/simple-coding-agent/workflows/: main.md
examples/skills/: README.md  project.json
examples/skills/skills/: echo-note.md  shell-repair-guide.md
examples/skills/workflows/: main.md
examples/turing-machine/: README.md  project.json
examples/turing-machine/fixture/: cells
examples/turing-machine/workflows/: main.md
src/Hwfl/: Driver.hs  Env.hs  Project.hs  SkillCatalog.hs  Source.hs
src/Hwfl/Ast/: Decl.hs  Expr.hs  Module.hs  Name.hs  Pat.hs  Pretty.hs  Skill.hs  Type.hs
src/Hwfl/Check/: Effects.hs  Env.hs  Error.hs  Infer.hs  Module.hs  Overload.hs  Prelude.hs  Project.hs  Schema.hs
src/Hwfl/Cli/: Json.hs
src/Hwfl/Eval/: Error.hs  Module.hs  Prelude.hs  Pure.hs  Value.hs
src/Hwfl/Json/: Encode.hs  Validate.hs
src/Hwfl/Llm/: Mock.hs  Pricing.hs  Provider.hs  Simple.hs  Types.hs
src/Hwfl/Obs/: Observer.hs  Redact.hs  Show.hs  Span.hs  Stream.hs  Trace.hs
src/Hwfl/Parse/: Expr.hs  Frontmatter.hs  Lexer.hs  Load.hs  Markdown.hs  Module.hs  Pat.hs  Section.hs  Type.hs
src/Hwfl/Runtime/: Agent.hs  Error.hs  Eval.hs  Exec.hs  Host.hs  Ignore.hs  Machine.hs  Run.hs  Skills.hs  Snapshot.hs  Store.hs  Turn.hs  Workspace.hs
src/Hwfl/Text/: Corpus.hs  Markdown.hs
src/Pml/: Env.hs  Project.hs  Source.hs
src/Pml/Ast/: Decl.hs  Expr.hs  Module.hs  Name.hs  Pat.hs  Pretty.hs  Type.hs
src/Pml/Check/: Effects.hs  Env.hs  Error.hs  Infer.hs  Module.hs  Overload.hs  Prelude.hs  Project.hs  Schema.hs
src/Pml/Eval/: Error.hs  Module.hs  Prelude.hs  Pure.hs  Value.hs
src/Pml/Json/: Encode.hs
src/Pml/Llm/: Mock.hs  Provider.hs  Simple.hs  Types.hs
src/Pml/Obs/: Redact.hs  Show.hs  Span.hs  Trace.hs
src/Pml/Parse/: Expr.hs  Frontmatter.hs  Lexer.hs  Load.hs  Markdown.hs  Module.hs  Pat.hs  Section.hs  Type.hs
src/Pml/Runtime/: Agent.hs  Error.hs  Eval.hs  Host.hs  Machine.hs  Run.hs  Snapshot.hs  Workspace.hs
src/Pml/Text/: Corpus.hs  Markdown.hs
test/: Spec.hs
test/Hwfl/: DriverSpec.hs  SkillCatalogSpec.hs
test/Hwfl/Ast/: PrettySpec.hs
test/Hwfl/Check/: LocateSpec.hs  ModuleSpec.hs  ProjectSpec.hs  SchemaSpec.hs
test/Hwfl/Cli/: JsonSpec.hs
test/Hwfl/Eval/: PureSpec.hs
test/Hwfl/Json/: ValidateSpec.hs
test/Hwfl/Llm/: PricingSpec.hs  ProviderSpec.hs
test/Hwfl/Obs/: ObserverSpec.hs  SpanSpec.hs  StreamSpec.hs
test/Hwfl/Parse/: ExprSpec.hs  FrontmatterSpec.hs  LoadSpec.hs  ModuleSpec.hs  SectionSpec.hs  TypeSpec.hs
test/Hwfl/Runtime/: AgentObjectSpec.hs  AgentSpec.hs  ChatSpec.hs  CodingAgentSpec.hs  CompareSpec.hs  ConcurrentSpec.hs  EvolveAgentSpec.hs  HostOpsSpec.hs  MetaInvokeSpec.hs  MetaReadSpec.hs  NestedSnapshotSpec.hs  ObjectSpec.hs  RunSpec.hs  SemanticCheckSpec.hs  SimpleCodingAgentSpec.hs  SkillSpec.hs  StoreSpec.hs  TrySpec.hs  WorkspaceSpec.hs
test/Hwfl/Text/: CorpusSpec.hs
test/Pml/Ast/: PrettySpec.hs
test/Pml/Check/: ModuleSpec.hs  ProjectSpec.hs  SchemaSpec.hs
test/Pml/Eval/: PureSpec.hs
test/Pml/Llm/: ProviderSpec.hs
test/Pml/Obs/: SpanSpec.hs
test/Pml/Parse/: ExprSpec.hs  LoadSpec.hs  ModuleSpec.hs  SectionSpec.hs  TypeSpec.hs
test/Pml/Runtime/: AgentObjectSpec.hs  AgentSpec.hs  ConcurrentSpec.hs  ObjectSpec.hs  RunSpec.hs  SemanticCheckSpec.hs  WorkspaceSpec.hs
test/fixtures/check-project/: project.json
test/fixtures/check-project-cycle/: project.json
test/fixtures/check-project-cycle/workflows/: a.md  b.md
test/fixtures/check-project/lib/: list.md
test/fixtures/check-project/workflows/: main.md
test/fixtures/semantic-target/lib/: search.md
test/fixtures/semantic-target/skills/: conflict-lang.md  example-hard-rule.md  forbid-search.md  ghost-tool.md  prefer-no-search.md  recommend-exec.md  require-search.md
test/fixtures/semantic-target/workflows/: bad.md  exec-gap.md  ok.md  output-gap.md  (+1 more)
test/fixtures/skills-project/: project.json
(+16 files in other folders)
