cabal-version:      3.0
name:               pml
version:            0.1.0.0
synopsis:           Markdown modules over a small typed ML kernel
description:        A command-line engine that loads markdown modules,
                    checks a small typed ML kernel, and evaluates with
                    durable host-effect transitions.
license:            BSD-3-Clause
author:             Daniel van den Eijkel
maintainer:         1515314+aische@users.noreply.github.com
category:           Development
build-type:         Simple

common opts
    default-language: GHC2021
    default-extensions:
        DerivingStrategies
        LambdaCase
        OverloadedStrings
        OverloadedRecordDot
    ghc-options:
        -Wall
        -Wunused-imports
        -Werror=missing-fields

library
    import:           opts
    hs-source-dirs:   src
    exposed-modules:
        Pml.Ast.Decl
        Pml.Ast.Expr
        Pml.Ast.Module
        Pml.Ast.Name
        Pml.Ast.Pat
        Pml.Ast.Pretty
        Pml.Ast.Type
        Pml.Check.Effects
        Pml.Check.Env
        Pml.Check.Error
        Pml.Check.Infer
        Pml.Check.Module
        Pml.Check.Overload
        Pml.Check.Prelude
        Pml.Check.Project
        Pml.Check.Schema
        Pml.Eval.Error
        Pml.Eval.Module
        Pml.Eval.Prelude
        Pml.Eval.Pure
        Pml.Eval.Value
        Pml.Llm.Mock
        Pml.Llm.Provider
        Pml.Llm.Simple
        Pml.Llm.Types
        Pml.Obs.Redact
        Pml.Obs.Show
        Pml.Obs.Span
        Pml.Obs.Trace
        Pml.Json.Encode
        Pml.Project
        Pml.Text.Corpus
        Pml.Text.Markdown
        Pml.Parse.Expr
        Pml.Parse.Frontmatter
        Pml.Parse.Lexer
        Pml.Parse.Load
        Pml.Parse.Markdown
        Pml.Parse.Module
        Pml.Parse.Pat
        Pml.Parse.Section
        Pml.Parse.Type
        Pml.Runtime.Agent
        Pml.Runtime.Error
        Pml.Runtime.Eval
        Pml.Runtime.Host
        Pml.Runtime.Machine
        Pml.Runtime.Run
        Pml.Runtime.Snapshot
        Pml.Runtime.Workspace
        Pml.Source
    build-depends:
        base                 ^>=4.18,
        aeson                >=2.0  && <2.3,
        bytestring           >=0.11 && <0.13,
        commonmark           >=0.2  && <0.3,
        containers           ^>=0.6.7,
        directory            >=1.3  && <1.4,
        filepath             >=1.4  && <1.6,
        llm-simple           ^>=0.1.0.1,
        megaparsec           >=9.0  && <10,
        parsec               >=3.1  && <3.2,
        parser-combinators   >=1.2  && <1.4,
        text                 >=1.2  && <2.2,
        time                 >=1.11 && <1.15,
        vector               >=0.12 && <0.14,
        yaml                 >=0.11 && <0.12

executable pml
    import:           opts
    hs-source-dirs:   app
    main-is:          Main.hs
    ghc-options:
        -threaded
        -rtsopts
        "-with-rtsopts=-N"
    build-depends:
        base,
        containers,
        directory,
        pml,
        text

test-suite pml-test
    import:           opts
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    ghc-options:
        -threaded
        -rtsopts
        "-with-rtsopts=-N"
        -main-is Spec
    other-modules:
        Pml.Ast.PrettySpec
        Pml.Check.ModuleSpec
        Pml.Check.ProjectSpec
        Pml.Check.SchemaSpec
        Pml.Eval.PureSpec
        Pml.Llm.ProviderSpec
        Pml.Obs.SpanSpec
        Pml.Parse.ExprSpec
        Pml.Parse.LoadSpec
        Pml.Parse.ModuleSpec
        Pml.Parse.SectionSpec
        Pml.Parse.TypeSpec
        Pml.Runtime.AgentSpec
        Pml.Runtime.AgentObjectSpec
        Pml.Runtime.ConcurrentSpec
        Pml.Runtime.ObjectSpec
        Pml.Runtime.RunSpec
        Pml.Runtime.SemanticCheckSpec
        Pml.Runtime.WorkspaceSpec
    build-depends:
        base,
        pml,
        aeson,
        bytestring,
        containers,
        directory,
        filepath,
        hspec                >=2.10 && <2.12,
        megaparsec,
        temporary            >=1.3  && <1.4,
        text,
        vector
